--- a/src/components/search-box/search-box-styles.css
+++ b/src/components/search-box/search-box-styles.css
@@ -1,1 +1,6 @@
-/* No CSS *//*# sourceMappingURL=search-box-styles.css.map */
+.search-box {
+  width: 150px;
+  height: 30px;
+  margin: 20px;
+}
+/*# sourceMappingURL=search-box-styles.css.map */
