--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,91 @@
 body {
-  font-family: Calibri;
+  font-family: Calibri, sans-serif;
   color: #333333;
   background-color: #5514b4;
+  min-height: 400px;
+  margin-bottom: 100px;
+  clear: both;
+}
+
+.container {
+  margin: 0 30px 0 30px;
+}
+
+.header-right {
+  float: right;
+}
+
+.head-links {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 15px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 .bt-logo {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   width: 100px;
   height: 100px;
   margin: 10px;
+}
+
+.bt-logo-footer {
+  width: 40px;
+  height: 40px;
+  margin-right: 5px;
 }
 
 h1 {
   color: #ffffff;
 }
 
+a:link {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+a:link:hover {
+  text-decoration: underline;
+}
+
 .pa-code-test {
   text-align: center;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: fixed;
+  color: #ffffff;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  margin-bottom: 2px;
+}
+
+@media (max-width: 640px) {
+  .container {
+    margin: 0 10px 0 10px;
+  }
+  h1 {
+    font-size: 1.5em;
+  }
+}
+
+@media (max-width: 510px) {
+  .container {
+    margin: 0;
+  }
 }
 /*# sourceMappingURL=App.css.map */
