--- a/src/App.scss
+++ b/src/App.scss
@@ -3,21 +3,84 @@ $header-footer: #ffffff;
 $body-p-span: #333333;
 
 body {
-  font-family: Calibri;
+  font-family: Calibri, sans-serif;
   color: $body-p-span;
   background-color: $primary-bt-purple;
+  min-height: 400px;
+  margin-bottom: 100px;
+  clear: both;
+}
+
+.container {
+  margin: 0 30px 0 30px;
+}
+
+.header-right {
+  float: right;
+}
+
+.head-links {
+  display: inline-flex;
+  margin: 15px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 .bt-logo {
+  display: inline-flex;
   width: 100px;
   height: 100px;
   margin: 10px;
+}
+
+.bt-logo-footer {
+  width: 40px;
+  height: 40px;
+  margin-right: 5px;
 }
 
 h1 {
   color: $header-footer;
 }
 
+a:link {
+  color: $header-footer;
+  text-decoration: none;
+}
+
+a:link:hover {
+  text-decoration: underline;
+}
+
 .pa-code-test {
   text-align: center;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  color: $header-footer;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  margin-bottom: 2px;
+}
+
+// Responsive changes
+
+@media (max-width: 640px) {
+  .container {
+    margin: 0 10px 0 10px;
+  }
+  h1 {
+    font-size: 1.5em;
+  }
+}
+
+@media (max-width: 510px) {
+  .container {
+    margin: 0;
+  }
 }
